fix: QR dialog being scrollable
Closes https://github.com/deltachat/deltachat-desktop/issues/4413.

I have tested it in both "New Chat" and "Join Group".

On even shorter screens the QR is probably gonna become unreadable,
but there is not much we can do, other than decreasing paddings.

--- a/packages/frontend/scss/dialogs/_qr-code.scss
+++ b/packages/frontend/scss/dialogs/_qr-code.scss
@@ -27,3 +27,18 @@
     }
   }
 }
+
+// Ensure that the QR code image is always shown in full,
+// and doesn't cause scroll.
+.show-qr-dialog-body {
+  display: flex;
+  flex-direction: column;
+  .show-qr-dialog-content {
+    min-height: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  img.show-qr-dialog-qr-image {
+    min-height: 0;
+  }
+}
